ghost/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: blog
spec:
  type: NodePort
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 2368
    targetPort: 2368
